# FastApiTest

./: .env.example  main.py  pyproject.toml
.github/workflows/: ci.yml
api_v1/: lifespan.py
api_v1/core/: config.py
api_v1/database_manager/: db_helper.py
api_v1/database_manager/models/: api_keys.py  users.py
api_v1/users/: crud.py  schemas.py  views.py
src/: main.py
src/core/: config.py  database_manager.py
src/dto/: __init__.py  token.py  user.py
src/mappings/: __init__.py  user_mapping.py
src/model/: __init__.py  admin.py  user.py
src/repo/: __init__.py  admin.py  user.py
src/routes/: __init__.py  admin.py  users.py
src/service/: __init__.py  auth.py  password.py  user.py
src/utils/: __init__.py  lifespan.py
tests/: crud_tests.py  endpoint_tests.py
tests/test_db_manager/: test_db_helper.py
tests/test_db_manager/models/: api_keys.py  users.py
